Fixed un-aligned feature blocks in Safari.

--- a/sites/all/themes/custom/bvng/less/views-slideshow.less
+++ b/sites/all/themes/custom/bvng/less/views-slideshow.less
@@ -168,15 +168,15 @@ image won't shift it's position.
 
 .block-featured-resources {
   .views-row {
-    display: inline-block;
-    position: relative;
+    display: inline-table;
     border: 1px solid @page-header-border-color;
     border-radius: 5px;
     background-color: #fefefe;
-    margin: 0px 5px 5px 0px;
+    margin: 0px 5px 10px 0px;
     padding: 15px;
     height: 190px;
     width: 290px;
+    line-height: 21px;
     overflow: hidden;
     -moz-box-shadow:    0px 0px 9px 0px #eee;
     -webkit-box-shadow: 0px 0px 9px 0px #eee;
